@@ -1,0 +1,15 @@
+#   Copyright 2004-2005 by Kevin Smith
+#   released under the MIT-style wxruby2 license
+
+%include "../common.i"
+
+%{
+#include <wx/wx.h>
+#include <wx/listctrl.h>
+%}
+
+%module(directors="1") wxListItem
+
+%import "include/wxObject.h"
+
+%include "include/wxListItem.h"
